# pyranges_1.x

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  LICENSE  README.md  check_typing_linting_and_formatting.py  conftest.py  continuous_integration_checks.py  meta.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: all_checks.yml  build_wheels_and_upload_to_pypi.yml  check.yml
book/: exons.py  make_book.py
condabuild/: builder.sh  meta.yaml
docs/: api_reference.rst  cheatsheet.rst  conf.py  conf.py~  developer_guide.rst  extension_genomicfeatures.rst  extension_orfs.rst  extension_seqs.rst  extension_stats.rst  how_to_columns.rst  how_to_create.rst  how_to_genomic_ops.rst  how_to_inspect.rst  how_to_map.rst  how_to_overlap.rst  how_to_pages.rst  how_to_rows.rst  how_to_sequences.rst  how_to_write.rst  index.rst  index.rst~  installation.rst  migration_cheatsheet.tsv  migration_guide.rst  pyranger_cli.rst  pyranges_extensions.rst  pyranges_module.rst  pyranges_objects.rst  range_frame.rst  requirements.txt  tiedpyranges.rst  tiedpyranges.rst~  todos.rst  tutorial.rst
docs/_static/: custom.css
docs/_templates/: custom_method_summary.rst
pyranges/: __init__.py  cli.py  data.py  empty.py  example_data.py  example_data_manager.py  genomicfeatures.py  get_fasta.py  helpers.py  loci_getter.py  multioverlap.py  multithreaded.py  names.py  option_manager.py  orfs.py  out.py  parallelism.py  pyranges_groupby.py  pyranges_helpers.py  pyranges_main.py  range_frame.py  readers.py  seqs.py  statistics.py  stats.py  strand_behavior_validators.py  subset.py  tostring.py  tostring2.py
pyranges/core/: assistant.py  empty.py  example_data.py  example_data_manager.py  loci_getter.py  multioverlap.py  names.py  namespace_utils.py  options.py  out.py  parallelism.py  pyranges_groupby.py  pyranges_helpers.py  pyranges_main.py  random.py  tostring.py  version.py
pyranges/data/: ncbi.fasta  ncbi.fasta.fai
pyranges/ext/: genomicfeatures.py  orfs.py  seqs.py  stats.py
pyranges/ext/genomicfeatures/: __init__.py  genomicfeatures_methods.py
pyranges/ext/orfs/: __init__.py  extend_orfs.py  orfs_methods.py
pyranges/ext/orfs/extend_orfs/: installer.sh
pyranges/ext/orfs/extend_orfs/src/orf_tools/: __init__.py
pyranges/ext/seqs/: README.md  __init__.py
pyranges/ext/seqs/docs/: conf.py  sequences.rst
pyranges/ext/seqs/src/easybioinfo/: __init__.py
pyranges/ext/stats/: __init__.py  stats_methods.py
pyranges/methods/: boundaries.py  call.py  cluster.py  combine_positions.py  complement.py  complement_overlaps.py  concat.py  count_overlaps.py  coverage.py  drop.py  getitem.py  init.py  intersection.py  interval_metrics.py  join.py  k_nearest.py  map_to_global.py  map_to_local.py  max_disjoint.py  merge.py  merge_cluster.py  nearest.py  new_position.py  overlap.py  slice_ranges.py  sort.py  spliced_subsequence.py  split.py  statistics.py  subsequence.py  subtract.py  subtraction.py  summary.py  tile_genome.py  to_rle.py  windows.py
pyranges/range_frame/: range_frame.py  range_frame_validator.py
pyranges1/: __init__.py  _ruranges.py  cli.py  orfs.py  readers.py  seqs.py  stats.py
pyranges1/core/: assistant.py  empty.py  example_data.py  loci_getter.py  multioverlap.py  names.py  options.py  out.py  pyranges_groupby.py  pyranges_helpers.py  pyranges_main.py  random.py  tostring.py  version.py
pyranges1/data/: ensembl.gtf  ncbi.fasta  smaller.bam
pyranges1/ext/: orfs.py  seqs.py  stats.py
pyranges1/methods/: boundaries.py  combine_positions.py  complement.py  complement_overlaps.py  concat.py  export_docs.py  interval_metrics.py  join.py  map_to_global.py  map_to_local.py  merge.py  overlap.py  slice_ranges.py  sort.py  split.py  statistics.py  summary.py  tile_genome.py  to_rle.py
pyranges1/range_frame/: range_frame.py  range_frame_validator.py
src/easybioinfo/: __init__.py  sequences.py  tiedpyranges.py
src/orf_tools/: extend_orfs.py
tests/: helpers.py  run_doctest_tutorial_howto.py  test_parallelism.py
tests/property_based/: hypothesis_helper.py  new.py  test_binary.py  test_do_not_error.py  test_unary.py
tests/unit/: conftest.py  k_nearest.py  statistics.py  test_change_chromosome_custom.py  test_concat.py  test_count_overlaps.py  test_genomicfeatures.py  test_guessers.py  test_io.py  test_join.py  test_overlaps.py  test_pandas_overrides.py  test_ruranges_dtypes.py  test_stranded.py  test_tostring.py
tests/unit/cumsum/: test_cumsum.py
tests/unit/data/: test_data.py
tests/unit/df_dict_mismatch/: test_mismatch.py
tests/unit/join/: test_join.py
tests/unit/mapping/: test_map.py
tests/unit/new_position/: test_new_position.py
tests/unit/slack/: test_slack.py
tests/unit/spliced_subsequence/: test_spliced_subsequence.py
tests/unit/test_data/: ensembl.gtf
tests/unit/unit/datatypes/: unary.py
tests/unit/unstrand/: test_unstrand.py
tests/unit/windows/: test_windows.py
