[build-system]
requires = ["setuptools>=61.0.0", "wheel", "cython", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyranges"
version = "0.0.129"
description = "GenomicRanges for Python."
requires-python = ">=3.11.0"
readme = "README.md"
authors = [{ name = "Endre Bakken Stovner", email = "endbak@pm.me" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta", "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering"
]
keywords = ["bioinformatics", "genomicranges", "genomics"]
dependencies = ["pandas", "ncls>=0.0.63", "tabulate", "sorted_nearest>=0.0.33", "natsort"]

[project.optional-dependencies]
pyranges_addons = ["pyrle", "bamread", "bwread", "fisher"]

# [project.development-dependencies]
# dev = ["ruff", "mypy"]


[tool.setuptools.packages.find]
where = ["."]

[tool.pytype]
inputs = ['pyranges']

[project.urls]
Homepage="http://github.com/pyranges/pyranges"

# [tool.pytest.ini_options]
# markers = [
#     "bedtools: requires bedtools"
# ]

[tool.ruff]

target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "N",
    # all docstring rules that can be automated
    "D200", "D201", "D202", "D203", "D204", "D207",
    "D208", "D209", "D210", "D211", "D212", "D213", "D214",
    "D215", "D300", "D301", "D400", "D403", "D405", "D406",
    "D407", "D408", "D409", "D410", "D411", "D412", "D413",
    "D415", "D416",
    "UP", "YTT", "ANN", "RUF", "FURB", "LOG", "PERF", "NPY",
    "FLY", "TRY", "PL", "PGH", "PD", "ERA", "ARG", "INT", "TCH",
    "TID", "SIM", "RET"
]
ignore = ["E501", "ANN002", "ANN003", "ANN101", "ANN401", "PLR0913", "PLC0415", "PD901"]
