[build-system]
requires = ["setuptools>=61.0.0", "wheel", "cython", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyranges"
version = "0.0.129"
description = "GenomicRanges for Python."
requires-python = ">=3.11.0"
readme = "README.md"
authors = [{ name = "Endre Bakken Stovner", email = "endbak@pm.me" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta", "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering"
]
keywords = ["bioinformatics", "genomicranges", "genomics"]
dependencies = ["pandas", "ncls>=0.0.63", "tabulate", "sorted_nearest>=0.0.33", "natsort"]

[project.optional-dependencies]
pyranges_addons = ["pyrle", "bamread", "bwread", "fisher"]

# [project.development-dependencies]
# dev = ["ruff", "mypy", "pandas-stubs", "numpy-stubs", "types-tabulate"]


[tool.setuptools.packages.find]
where = ["."]

[tool.pytype]
inputs = ['pyranges']

[project.urls]
Homepage="http://github.com/pyranges/pyranges"

# [tool.pytest.ini_options]
# markers = [
#     "bedtools: requires bedtools"
# ]

[tool.mypy]
python_version = "3.12"

[tool.ruff]


target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501", "ANN002", "ANN003", "ANN001", "ANN101", "ANN102", "ANN401", "PLR0913", "PLC0415",
    "PD901", "D101", "D100", "D107", "CPY", "D105", "D104",
]
