[metadata]
name = easybioinfo
version = 0.1.4
author = Marco Mariotti
author_email = marco.mariotti@ub.edu
description = Convenient python functions for bioinformatics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marco-mariotti/easybioinfo
project_urls =
https://github.com/marco-mariotti
    Github Website=https://github.com/marco-mariotti 

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cython   >=0.29	
    pyranges >=0.0.99
    pyfaidx  >=0.6
    pandas   >=1.2
    
[options.packages.find]
where = src
