[metadata]
name =  orf_tools
version = attr: orf_tools._version.__version__  
author = Marco Mariotti and Joan Pallares
author_email = marco.mariotti@ub.edu
description = Tools to work with open reading frames (ORFs)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
https://github.com/marco-mariotti
    Github Website=https://github.com/marco-mariotti/orf_tools/tree/main
    

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    #pyranges >= 0.0.120
    pyfaidx >= 0.7.2
    pandas >= 1.3.5
    easyterm >= 1.0.0
    numpy >= 1.17.0

[options.packages.find]
where = src
